crates/sgf-core/tests/snapshots/wormhole_pairs/pair_10_11_new.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Joined Void #10 and system #11 as wormhole pair 3
inverse: SetWormholePair { a: 10, b: 11, pair: None }

--- scenario
+++ scenario
@@ -41,8 +41,8 @@
 	system = { id = "7" position = { x = 20 y = -20 } name = "Ingress" effect = { set_star_flag = painted_galaxy_wormhole_1 set_star_flag = empire_cluster } }
 	system = { id = "8" position = { x = -160 y = -160 } name = "Egress" effect = { set_star_flag = painted_galaxy_wormhole_1 set_star_flag = empire_cluster } }
 	system = { id = "9" position = { x = 0 y = -180 } name = "Old Seat" effect = { set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_n set_star_flag = painted_galaxy_fe_spawn_random set_star_flag = painted_galaxy_fe_spawn_distance_40 set_star_flag = painted_galaxy_fe_spawn_preferred } }
-	system = { id = "10" position = { x = 150 y = -30 } name = "Void" }
-	system = { id = "11" position = { x = -150 y = -30 } }
+	system = { id = "10" position = { x = 150 y = -30 } name = "Void" effect = { set_star_flag = painted_galaxy_wormhole_3 set_star_flag = empire_cluster } }
+	system = { id = "11" position = { x = -150 y = -30 } effect = { set_star_flag = painted_galaxy_wormhole_3 set_star_flag = empire_cluster } }
 	system = { id = "12" position = { x = 120 y = 150 } name = "High Seat" initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_automatic_initializer set_star_flag = painted_galaxy_wormhole_2 set_star_flag = empire_cluster set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_se set_star_flag = painted_galaxy_fe_spawn_materialist set_star_flag = painted_galaxy_fe_spawn_distance_60 set_star_flag = painted_galaxy_fe_spawn_preferred set_star_flag = painted_galaxy_fe_spawn_fallback } }
 	system = { id = "13" position = { x = -120 y = 150 } name = "Low Seat" effect = { set_star_flag = painted_galaxy_wormhole_2 set_star_flag = empire_cluster } }
 	add_hyperlane = { from = "0" to = "5" }
