crates/sgf-core/tests/snapshots/wormhole_pairs/pair_12_13_remove.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Removed the wormhole pair from High Seat #12 and Low Seat #13
inverse: SetWormholePair { a: 12, b: 13, pair: Some(2) }

--- scenario
+++ scenario
@@ -43,8 +43,8 @@
 	system = { id = "9" position = { x = 0 y = -180 } name = "Old Seat" effect = { set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_n set_star_flag = painted_galaxy_fe_spawn_random set_star_flag = painted_galaxy_fe_spawn_distance_40 set_star_flag = painted_galaxy_fe_spawn_preferred } }
 	system = { id = "10" position = { x = 150 y = -30 } name = "Void" }
 	system = { id = "11" position = { x = -150 y = -30 } }
-	system = { id = "12" position = { x = 120 y = 150 } name = "High Seat" initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_automatic_initializer set_star_flag = painted_galaxy_wormhole_2 set_star_flag = empire_cluster set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_se set_star_flag = painted_galaxy_fe_spawn_materialist set_star_flag = painted_galaxy_fe_spawn_distance_60 set_star_flag = painted_galaxy_fe_spawn_preferred set_star_flag = painted_galaxy_fe_spawn_fallback } }
-	system = { id = "13" position = { x = -120 y = 150 } name = "Low Seat" effect = { set_star_flag = painted_galaxy_wormhole_2 set_star_flag = empire_cluster } }
+	system = { id = "12" position = { x = 120 y = 150 } name = "High Seat" initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_automatic_initializer set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_se set_star_flag = painted_galaxy_fe_spawn_materialist set_star_flag = painted_galaxy_fe_spawn_distance_60 set_star_flag = painted_galaxy_fe_spawn_preferred set_star_flag = painted_galaxy_fe_spawn_fallback } }
+	system = { id = "13" position = { x = -120 y = 150 } name = "Low Seat" }
 	add_hyperlane = { from = "0" to = "5" }
 	add_hyperlane = { from = "0" to = "6" }
 	add_hyperlane = { from = "5" to = "1" }
